[tool.poetry]
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]
description = ""
name = "notif"
version = "0.1.0"

[tool.poetry.dependencies]
blacksmith = {version = "^0.12.1", extras = ["prometheus"]}
python = "^3.9"
starlette = "^0.17.0"
aioredis = "^2.0.1"
hypercorn = "^0.13.2"
result = "^0.8.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
