[tool.poetry]
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]
description = ""
name = "notif"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
blacksmith = {version = "^2.4", extras = ["redis", "prometheus"]}
starlette = "^0.31.0"
hypercorn = "^0.14.4"
redis = "^4.6.0"
result = "^0.11.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
