[tool.poetry]
name = "notif"
version = "0.1.0"
description = ""
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]

[tool.poetry.dependencies]
python = "^3.10"
blacksmith = { version = "^2.4.0", extras = ["prometheus"] }
hypercorn = "^0.14.4"
redis = "^4.6.0"
starlette = "^0.31.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
