[tool.poetry]
name = "notif"
version = "0.1.0"
description = ""
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.17.0"
hypercorn = "^0.13.2"
blacksmith = { version = "^0.12.1", extras = ["prometheus"] }
aioredis = {version = "^2.0.0"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
