[tool.poetry]
name = "notif"
version = "0.1.0"
description = ""
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]

[tool.poetry.dependencies]
python = "^3.9"
blacksmith = "^2.0"
fastapi = "^0.73.0"
hypercorn = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
