[tool.poetry]
name = "notif"
version = "0.1.0"
description = ""
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.16.0"
uvicorn = "^0.15.0"
blacksmith = "0.5.0"
"starlette-zipkin" = {git = "https://github.com/mardiros/starlette-zipkin.git"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
