[tool.poetry]
name = "user"
version = "0.1.0"
description = ""
authors = ["Guillaume Gauvrit <guillaume@gauvr.it>"]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.31.0"
starlette-zipkin = "^0.3.0"
uvicorn = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
